# pcfg-cky-inside-outside

./: .gitignore  CMakeLists.txt  Makefile  README.md  cluster.yaml  config.yaml  cuda_helper.hpp  grammar.pcfg  grammar_demo_2.pcfg  launch_apps.sh  macros.def  main.cpp  make_distributed_training.sh  phase_convert.cpp  sequence.txt
algorithms/: alg_inside_outside_main.cpp  alg_inside_outside_main.h  tree_parser.cpp  tree_parser.hpp
algorithms/statistic/: statistics.cpp  statistics.hpp
analysis/: analysis.ipynb
data/: grammar-trained.pcfg  grammar.pcfg  grammar_demo.pcfg
data/pcfg/: grammar.pcfg  grammar_demo.pcfg  grammar_demo_2.pcfg
dataset/: dataset_helper.cpp  dataset_helper.d  dataset_helper.hpp
debug/: debug.cpp
grammar/: grammar.cpp  grammar.d  grammar.hpp  grammar_normalizer.cpp  grammar_normalizer.hpp  grammar_parser.cpp  grammar_parser.d  grammar_parser.hpp
include/: constants.h  cuda_helper.hpp  macros.def
include/algorithms/: alg_inside_outside_main.h  tree_parser.hpp
include/dataset/: dataset_helper.hpp
include/debug/: debug.hpp
include/distribution/: global_variables.hpp  message_impl.h  package_manager.hpp  services.hpp  shared_memory.hpp
include/distribution/common/: message.h
include/distribution/communication/: client.hpp  package.hpp  sync.hpp
include/distribution/include/: message_impl.h
include/distribution/include/common/: memory_region.h  message.h
include/grammar/: grammar.hpp  grammar_normalizer.hpp  grammar_parser.hpp
include/kernels/: expect_count.cuh  inside.cuh  outside.cuh  update_parameters.cuh  validation.cuh
include/statistics/: statistics.hpp
include/utils/: application_io.hpp  data_accessing.hpp  data_encoding.h  data_structure.hpp  logger.hpp  math.hpp  printer.hpp  string_helper.hpp  tensor.hpp
kernels/: expect_count.cuh  inside.cuh  outside.cuh  update_parameters.cuh
python_scripts/: 1_feature_eval_mi_ml.py  feature_evaluation_results.dict.npy  generate_dataframes.py  keys.txt.ipynb  report_analysis.ipynb  report_parser.py  report_statistics.py  visualizer.py
python_scripts/visualization/: graph_ploting.py
src/: distributed_training_main.cpp  distributed_training_moderator.cpp  main.cpp  main.cu  main.h  phase_convert.cpp  syntax_analysis.cpp
src/algorithms/: alg_inside_outside_main.cpp  tree_parser.cpp
src/dataset/: dataset_helper.cpp
src/debug/: debug.cpp
src/distribution/: package_manager.cpp  services.cpp  shared_memory.cpp
src/grammar/: grammar.cpp  grammar_normalizer.cpp  grammar_parser.cpp
src/kernels/: .update_parameters.cpp.swp  expect_count.cpp  inside.cpp  outside.cpp  update_parameters.cpp
src/kernels/cuda/: expect_count.cu  inside.cu  outside.cu  update_parameters.cu  validation.cu
src/statistics/: entropy_utils.cpp  statistics.cpp  statistics_main.cpp  tree_feature_statistics.cpp  tree_informatics_feature_statistics.cpp  tree_utils.cpp
src/test/: test_parsing.cpp
src/utils/: application_io.cpp  data_accessing.cpp  data_encoding.cpp  data_structure.cpp  logger.cpp  math.cpp  printer.cpp  string_helper.cpp  tensor.cpp
unit_test/: hashtable_test.cpp  inside_test.cpp
utils/: application_io.cpp  application_io.hpp  data_accessing.cpp  data_accessing.hpp  data_encoding.cpp  data_encoding.h  data_structure.cpp  data_structure.hpp  printer.cpp  printer.hpp  string_helper.cpp  string_helper.hpp  tensor.cpp  tensor.hpp
